<resources>
    <string name="app_name">coo</string>
    <string name="kertas_gunting_batu">Kertas Gunting Batu</string>
    <string name="batu">batu</string>
    <string name="kertas2">kertas2</string>
    <string name="gunting2">gunting2</string>
    <string name="batu2">batu</string>
    <string name="gunting">Gunting</string>
    <string name="computer_memilih_kertas">Computer Memilih Kertas</string>
    <string name="kertas">kertas</string>
    <string name="computer_memilih_batu" />
    <string name="computer_memilih_gunting" />
    <string name="draw">Draw</string>
    <string name="vs">VS</string>
    <string name="pemain_1_menang">Pemain 1 Menang</string>
</resources>